@@ -1,8 +1,10 @@
 
 6.40  2016-01-09
+  - Removed upgrade event from Mojo::Transaction::HTTP.
   - Replaced deprecated proxy method in Mojo::Message::Request with an
     attribute.
   - Added SNI support to all built-in web servers. (bpmedley, sri)
+  - Added next attribute to Mojo::Transaction::HTTP.
   - Updated jQuery to version 2.2.0.
 
 6.39  2016-01-03
